admin licensing request now working